--- a/index.ipynb
+++ b/index.ipynb
@@ -1114,7 +1114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = ['Buenos Aires', ]\n",
+    "text_values = ['Buenos Aires', 'Toronto', 'Mar']\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
