--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,11 +1110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = ['Buenos Aires', 'Toronto', 'Marakesh']\n",
+    "text_values = ['Buenos2 Aires', 'Toronto', 'Marakesh']\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
